display-drivers: Update from OnePlus CPH2613_14.0.1.704(EX01)
Signed-off-by: inferno0230 <mail@inferno0230.in>

--- a/qcom/opensource/display-drivers/msm/Kbuild
+++ b/qcom/opensource/display-drivers/msm/Kbuild
@@ -178,7 +178,8 @@ msm_drm-$(CONFIG_DRM_OPLUS) += ../oplus/oplus_dsi_support.o \
 	../oplus/oplus_display_esd.o \
 	../oplus/oplus_bl.o \
 	../oplus/oplus_display_panel_feature.o \
-	../oplus/oplus_display_interface.o
+	../oplus/oplus_display_interface.o \
+	../oplus/oplus_display_panel_cabc.o
 #endif /* OPLUS_FEATURE_DISPLAY */
 
 msm_drm-$(CONFIG_DRM_MSM_SDE) += sde/sde_crtc.o \
