--- a/qcom/opensource/camera-kernel/Makefile
+++ b/qcom/opensource/camera-kernel/Makefile
@@ -3,8 +3,8 @@
 KBUILD_OPTIONS += CAMERA_KERNEL_ROOT=$(KERNEL_SRC)/$(M)
 KBUILD_OPTIONS += KERNEL_ROOT=$(KERNEL_SRC)
 KBUILD_OPTIONS += MODNAME=camera
-KBUILD_OPTIONS += BOARD_PLATFORM=kalama
-KBUILD_OPTIONS += KBUILD_EXTRA_SYMBOLS=$(OUT_DIR)/../sm8550-modules/qcom/opensource/mmrm-driver/Module.symvers
+KBUILD_OPTIONS += BOARD_PLATFORM=crow
+KBUILD_OPTIONS += KBUILD_EXTRA_SYMBOLS=$(OUT_DIR)/../sm7550-modules/qcom/opensource/mmrm-driver/Module.symvers
 
 all: modules
 
