--- a/qcom/opensource/wlan/platform/Kbuild
+++ b/qcom/opensource/wlan/platform/Kbuild
@@ -46,6 +46,18 @@ ifeq ($(CONFIG_CNSS2_CONDITIONAL_POWEROFF),y)
 KBUILD_CPPFLAGS += -DCONFIG_CNSS2_CONDITIONAL_POWEROFF
 endif
 
+#ifdef OPLUS_FEATURE_WIFI_FTM
+KBUILD_CPPFLAGS += -DOPLUS_FEATURE_WIFI_FTM
+#endif /* OPLUS_FEATURE_WIFI_FTM */
+
+#ifdef OPLUS_FEATURE_WIFI_MAC
+KBUILD_CPPFLAGS += -DOPLUS_FEATURE_WIFI_MAC
+#endif /* OPLUS_FEATURE_WIFI_MAC */
+
+#ifdef OPLUS_FEATURE_WIFI_BDF
+KBUILD_CPPFLAGS += -DOPLUS_FEATURE_WIFI_BDF
+#endif /* OPLUS_FEATURE_WIFI_BDF */
+
 ifeq ($(CONFIG_CNSS_REQ_FW_DIRECT),y)
 KBUILD_CPPFLAGS += -DCONFIG_CNSS_REQ_FW_DIRECT
 endif
@@ -95,10 +107,6 @@ found = $(shell if grep -qF "int msm_pcie_retrain_port_link" $(srctree)/include/
 ifeq ($(findstring yes, $(found)), yes)
 KBUILD_CPPFLAGS += -DCONFIG_PCIE_SWITCH_RETRAIN_LINK_SUPPORT
 endif
-
-#ifdef OPLUS_FEATURE_WIFI_BDF
-KBUILD_CPPFLAGS += -DOPLUS_FEATURE_WIFI_BDF
-#endif /* OPLUS_FEATURE_WIFI_BDF */
 
 obj-$(CONFIG_CNSS2) += cnss2/
 obj-$(CONFIG_ICNSS2) += icnss2/
