--- a/qcom/opensource/wlan/qcacld-3.0/Kbuild
+++ b/qcom/opensource/wlan/qcacld-3.0/Kbuild
@@ -174,6 +174,14 @@ HDD_OBJS := 	$(HDD_SRC_DIR)/wlan_hdd_assoc.o \
 		$(HDD_SRC_DIR)/wlan_hdd_wmm.o \
 		$(HDD_SRC_DIR)/wlan_hdd_wowl.o\
 
+#ifdef OPLUS_FEATURE_WIFI_MAC
+KBUILD_CPPFLAGS += -DOPLUS_FEATURE_WIFI_MAC
+#endif /* OPLUS_FEATURE_WIFI_MAC */
+
+#ifdef OPLUS_FEATURE_WIFI_SIGNAL
+KBUILD_CPPFLAGS += -DOPLUS_FEATURE_WIFI_SIGNAL
+#endif /* OPLUS_FEATURE_WIFI_SIGNAL */
+
 ifeq ($(CONFIG_UNIT_TEST), y)
 HDD_OBJS += $(HDD_SRC_DIR)/wlan_hdd_unit_test.o
 endif
